Fixed hero image spacing

--- a/components/cloudcannon/sections/hero-image/hero-image.scss
+++ b/components/cloudcannon/sections/hero-image/hero-image.scss
@@ -1,11 +1,16 @@
 .c-hero-image {
+    display: flex;
+
     &.--left {
+        justify-content: flex-start;
         text-align: left;
     }
     &.--right {
+        justify-content: flex-end;
         text-align: right;
     }
     &.--center {
+        justify-content: center;
         text-align: center;
     }
 
